# OS2mo-Init

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  config.default.yml  docker-compose.yml  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
os2mo_init/: __init__.py  __main__.py  app.py  classes.py  cli.py  clients.py  config.py  defaults.py  facets.py  initialisers.py  it_systems.py  mo.py  root_org.py  util.py
os2mo_init/autogenerated_graphql_client/: __init__.py  _testing_get_class.py  async_base_client.py  base_model.py  classes_query.py  client.py  create_class_mutation.py  create_facet_mutation.py  create_i_t_system_mutation.py  enums.py  exceptions.py  facets_query.py  get_class.py  i_t_systems_query.py  input_types.py  root_org_create.py  root_org_query.py  scalars.py  update_class_mutation.py  update_i_t_system_mutation.py
tests/: conftest.py  test_classes.py  test_cli.py  test_config.py  test_facets.py  test_initialisers.py  test_it_systems.py  test_mo.py  test_os2mo_init.py  test_root_org.py  test_util.py
tests/integration/: test_init.py
