[tool.poetry]
name = "os2mo-init"
version = "0.1.1"
description = "Database initialiser for OS2mo"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-init"
keywords = ["os2mo"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pydantic = "^1.8.2"
pyyaml = "^6.0"
raclients = "^0.10.1"
ra-utils = "^0.4.0"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
reorder-python-imports = "^2.6.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
types-PyYAML = "^6.0.1"
respx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"
