[tool.poetry]
name = "os2mo-init"
version = "0.0.0"  # versioning handled by conventional commits
description = "Database initialiser for OS2mo"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-init"
keywords = ["os2mo"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pydantic = "^1.10.7"
pyyaml = "^6.0"
raclients = "^3.1.4"
ra-utils = "^1.13.9"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
reorder-python-imports = "^2.6.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
pytest-cov = "^4.0.0"
pytest-split = "^0.8.1"
types-PyYAML = "^6.0.1"
respx = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
