[tool.poetry]
name = "os2mo-init"
version = "0.0.0"  # versioning handled by conventional commits
description = "Database initialiser for OS2mo"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-init"
keywords = ["os2mo"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.4"
pydantic = "1.10.11"
pyyaml = "^6.0"
raclients = "^3.1.12"
ra-utils = "^1.13.9"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
reorder-python-imports = "^3.10.0"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-split = "^0.8.1"
types-PyYAML = "^6.0.12.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
